@startuml
title Inventory Management - SQL Database ERD

hide circle
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam nodesep 70
skinparam ranksep 70
skinparam padding 2
skinparam ArrowColor #002457
skinparam ArrowThickness 2
top to bottom direction

package "Inventory" #F7D6FD {

    entity "material" as material #F2C6FA {
        * id : uuid <<PK>>
        --
        name : text
        material_type : text
        default_unit : text
        is_reusable : boolean
        is_project_specific : boolean
        default_expiry_days : integer
        created_at : timestamp
        updated_at : timestamp
    }

    entity "material_metadata" as material_metadata #F2C6FA {
        * id : uuid <<PK>>
        --
        * material_id : uuid <<FK>>
        metadata_key : text
        metadata_value : text
        created_at : timestamp
    }

    entity "inventory_event" as inventory_event #F2C6FA {
        * id : uuid <<PK>>
        --
        event_type : text
        purchase_order_line_id : uuid <<FK, nullable>>
        workflow_step_run_id : uuid <<FK, nullable>>
        reason : text
        created_at : timestamp
    }

    entity "inventory_lot" as inventory_lot #F2C6FA {
        * id : uuid <<PK>>
        --
        * material_id : uuid <<FK>>
        project_id : uuid <<FK, nullable>>
        container_position_id : uuid <<FK, nullable>>
        ownership_scope : text
        lot_code : text
        current_quantity : numeric
        unit : text
        concentration : numeric
        concentration_unit : text
        status : text
        expires_at : date
        received_at : timestamp
        created_at : timestamp
        updated_at : timestamp
    }

    entity "inventory_reservation" as inventory_reservation #F2C6FA {
        * id : uuid <<PK>>
        --
        * inventory_lot_id : uuid <<FK>>
        workflow_step_run_id : uuid <<FK, nullable>>
        experiment_id : uuid <<FK, nullable>>
        reserved_quantity : numeric
        unit : text
        status : text
        expires_at : timestamp
        created_at : timestamp
        updated_at : timestamp
    }

    entity "inventory_transaction" as inventory_transaction #F2C6FA {
        * id : uuid <<PK>>
        --
        * inventory_event_id : uuid <<FK>>
        * inventory_lot_id : uuid <<FK>>
        reservation_id : uuid <<FK, nullable>>
        quantity_delta : numeric
        unit : text
        from_container_position_id : uuid <<FK, nullable>>
        to_container_position_id : uuid <<FK, nullable>>
        created_at : timestamp
    }
}

package "Storage" #EEF6FF {

    entity "storage_location" as storage_location #8BA7E2 {
        * id : uuid <<PK>>
        --
        parent_location_id : uuid <<FK, nullable>>
        name : text
        location_type : text
        status : text
        created_at : timestamp
        updated_at : timestamp
    }

    entity "container" as container #8BA7E2 {
        * id : uuid <<PK>>
        --
        * storage_location_id : uuid <<FK>>
        barcode : text
        name : text
        container_type : text
        status : text
        created_at : timestamp
        updated_at : timestamp
    }

    entity "container_position" as container_position #8BA7E2 {
        * id : uuid <<PK>>
        --
        * container_id : uuid <<FK>>
        position_code : text
        row_label : text
        column_label : text
        created_at : timestamp
    }
}

package "Supply" #8ADFC5 {

    entity "supplier" as supplier #45CEA5 {
        * id : uuid <<PK>>
        --
        name : text
        supplier_code : text
        created_at : timestamp
        updated_at : timestamp
    }

    entity "purchase_order" as purchase_order #45CEA5 {
        * id : uuid <<PK>>
        --
        * supplier_id : uuid <<FK>>
        order_number : text
        status : text
        ordered_at : timestamp
        expected_at : timestamp
        received_at : timestamp
        created_at : timestamp
        updated_at : timestamp
    }

    entity "purchase_order_line" as purchase_order_line #45CEA5 {
        * id : uuid <<PK>>
        --
        * purchase_order_id : uuid <<FK>>
        * material_id : uuid <<FK>>
        supplier_sku : text
        ordered_quantity : numeric
        received_quantity : numeric
        unit : text
        status : text
        created_at : timestamp
        updated_at : timestamp
    }
}

package "Recipes" #FFF7ED {

    entity "recipe" as recipe #F3DCC0 {
        * id : uuid <<PK>>
        --
        name : text
        workflow_type : text
        version : integer
        is_active : boolean
        created_at : timestamp
        updated_at : timestamp
    }

    entity "recipe_step" as recipe_step #F3DCC0 {
        * id : uuid <<PK>>
        --
        * recipe_id : uuid <<FK>>
        name : text
        step_key : text
        step_order : integer
        created_at : timestamp
        updated_at : timestamp
    }

    entity "recipe_step_dependency" as recipe_step_dependency #F3DCC0 {
        * id : uuid <<PK>>
        --
        * predecessor_recipe_step_id : uuid <<FK>>
        * successor_recipe_step_id : uuid <<FK>>
        created_at : timestamp
    }

    entity "recipe_step_input" as recipe_step_input #F3DCC0 {
        * id : uuid <<PK>>
        --
        * recipe_step_id : uuid <<FK>>
        * material_id : uuid <<FK>>
        required_quantity : numeric
        unit : text
        min_concentration : numeric
        concentration_unit : text
        is_consumed : boolean
        created_at : timestamp
        updated_at : timestamp
    }

    entity "recipe_step_output" as recipe_step_output #F3DCC0 {
        * id : uuid <<PK>>
        --
        * recipe_step_id : uuid <<FK>>
        * material_id : uuid <<FK>>
        expected_quantity : numeric
        unit : text
        expected_container_type : text
        created_at : timestamp
        updated_at : timestamp
    }
}

package "Workflow Execution" #FFCFBB {

    entity "customer" as customer #FDB294 {
        * id : uuid <<PK>>
        --
        name : text
        external_reference : text
        status : text
        created_at : timestamp
        updated_at : timestamp
    }

    entity "project" as project #FDB294 {
        * id : uuid <<PK>>
        --
        * customer_id : uuid <<FK>>
        name : text
        status : text
        created_at : timestamp
        updated_at : timestamp
    }

    entity "experiment" as experiment #FDB294 {
        * id : uuid <<PK>>
        --
        * project_id : uuid <<FK>>
        name : text
        experiment_type : text
        status : text
        planned_at : timestamp
        started_at : timestamp
        completed_at : timestamp
        created_at : timestamp
        updated_at : timestamp
    }

    entity "workflow_run" as workflow_run #FDB294 {
        * id : uuid <<PK>>
        --
        * experiment_id : uuid <<FK>>
        * recipe_id : uuid <<FK>>
        run_number : integer
        status : text
        planned_rerun_count : integer
        started_at : timestamp
        completed_at : timestamp
        created_at : timestamp
        updated_at : timestamp
    }

    entity "workflow_step_run" as workflow_step_run #FDB294 {
        * id : uuid <<PK>>
        --
        * workflow_run_id : uuid <<FK>>
        * recipe_step_id : uuid <<FK>>
        status : text
        started_at : timestamp
        completed_at : timestamp
        created_at : timestamp
        updated_at : timestamp
    }
}

' Inventory relationships
material ||--o{ material_metadata : has
material ||--o{ inventory_lot : stocked as
inventory_event ||--o{ inventory_transaction : contains
inventory_lot ||--o{ inventory_transaction : changes through
inventory_lot ||--o{ inventory_reservation : reserved by
inventory_reservation ||--o{ inventory_transaction : fulfilled by

' Storage relationships
storage_location ||--o{ storage_location : contains
storage_location ||--o{ container : stores
container ||--|{ container_position : has positions
container_position ||--o{ inventory_lot : holds
container_position ||--o{ inventory_transaction : from
container_position ||--o{ inventory_transaction : to

' Supply relationships
supplier ||--o{ purchase_order : receives
purchase_order ||--|{ purchase_order_line : has lines
material ||--o{ purchase_order_line : ordered as
purchase_order_line ||--o{ inventory_event : received through

' Recipe relationships
recipe ||--|{ recipe_step : has steps
recipe_step ||--o{ recipe_step_dependency : predecessor
recipe_step ||--o{ recipe_step_dependency : successor
recipe_step ||--o{ recipe_step_input : requires
recipe_step ||--o{ recipe_step_output : creates
material ||--o{ recipe_step_input : input material
material ||--o{ recipe_step_output : output material

' Workflow relationships
customer ||--o{ project : owns
project ||--o{ experiment : owns
project ||--o{ inventory_lot : owns project stock
experiment ||--o{ workflow_run : runs
recipe ||--o{ workflow_run : executed as
workflow_run ||--|{ workflow_step_run : contains
recipe_step ||--o{ workflow_step_run : executed as

' Workflow / inventory bridge
workflow_step_run ||--o{ inventory_reservation : reserves
workflow_step_run ||--o{ inventory_event : causes
experiment ||--o{ inventory_reservation : planned stock

@enduml